# Alpha-Guide

./: .gitignore  Alpha_Guide-documentation.docx  README.md  pyproject.toml
.cursor/rules/: frontend-rule.mdc
api/: index.py
app/: globals.css  layout.tsx  page.tsx
components/: chat-composer.tsx  chat-message.tsx  chat-sidebar.tsx  settings-drawer.tsx  topic-guides-dialog.tsx  typing-indicator.tsx  welcome-card.tsx
helpers/: agent.py  hybrid_retriever.py  proxy.py
notebooks/: generate_testset.ipynb
